# visiontrader-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
examples/data/: btc_vol_smile_2026-06-03.csv
src/visiontrader/: __init__.py  _auth_signing.py  _credentials.py  _http.py  auth.py  exceptions.py  models.py  options.py  resolvers.py  smile_analytics.py
src/visiontrader/plots/: __init__.py  smile.py
tests/: conftest.py  test_auth_signing.py  test_http.py  test_login.py  test_options_client.py  test_resolvers.py  test_setup_key.py  test_show_keys.py  test_smile.py  test_smile_analytics.py  test_snapshot_info.py  test_test_key.py
