[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visiontrader"
version = "0.1.0"
description = "Official Python client for the VisionTrader market data API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "VisionTrader" }]
keywords = ["crypto", "options", "deribit", "market-data", "visiontrader"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0.0"]
dev = [
    "pandas>=2.0.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/visiontrader/visiontrader-python"
Repository = "https://github.com/visiontrader/visiontrader-python"
Documentation = "https://github.com/visiontrader/visiontrader-python#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/visiontrader"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
